<resources>
    <string name="app_name">Firebase WebRTC</string>
    <string name="welcome_text">Agendamento de Videochamadas</string>
    <string name="username">Nome de Utilizador</string>
    <string name="password">Palavra-Passe</string>
    <string name="sign_in">Login</string>
    <string name="someone_is_calling_you">Temi está a ligar</string>
    <string name="accept">Aceitar</string>
    <string name="decline">Rejeitar</string>
    <string name="repeat_password">Repetir Palavra-Passe</string>
    <string name="sign_up">Registo</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="already_registered_signin">Already registered, Sign In!</string>
    <string name="e_mail">E-mail</string>
    <string name="p_gina_de_administrador">Página de administrador</string>
    <string name="gerir_permiss_es">Gerir permissões</string>
    <string name="gerir_calend_rio">Gerir calendário</string>
    <string name="in_call_with">Em chamada com %1$s</string>
    <string name="campos_vazios">Campos vazios</string>
    <string name="unverified_email">Email não verificado. Por favor, verifique o seu email.</string>
    <string name="wrong_password">As senhas não coincidem!</string>
    <string name="failure_creating_user">Falha ao criar usuário: %1$s</string>
    <string name="verification_email_sent">Email de verificação enviado</string>
    <string name="failed_to_send_verification_email">Falha ao enviar email de verificação: %1$s</string>
    <string name="error_creating_user">Erro na criação do usuário: %1$s</string>
    <string name="error_saving_user_info">Erro ao salvar informações do usuário: %1$s</string>
    <string name="error_getting_current_user">Erro ao obter o usuário atual</string>
    <string name="error_removing_user">Falha ao remover usuário: %1$s</string>
    <string name="user_removed">Usuário removido%1$s</string>
    <string name="due_to">" devido a %1$s"</string>
    <string name="registration_error">Falha no registro</string>
    <string name="search">Search</string>
    <string name="agendar">Agendar</string>
    <string name="select_date">Select Date</string>
    <string name="select_hour">Select Hour</string>
    <string name="nota">Nota:</string>
    <string name="hora_selecionada">Hora selecionada:</string>
    <string name="dia_selecionado">Dia selecionado:</string>
    <string name="selecione_um_dia">Selecione um dia</string>
    <string name="selected_date">Selected Date: %1$s</string>
    <string name="selected_time">Selected Time: %1$s</string>
    <string name="nome_do_utente">Nome do Utente</string>
    <string name="minutos_entre_chamadas">Minutos entre chamadas: %1$s</string>
</resources>