<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Chamadas Agendadas"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notificationsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="Notificações"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/incomingCallLayout" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/incomingCallLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/incomingCallTitleTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/someone_is_calling_you"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/acceptButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/accept"
                        android:textColor="@color/white"
                        app:cornerRadius="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        app:backgroundTint="@color/dark_green"
                        app:layout_constraintTop_toBottomOf="@id/incomingCallTitleTv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/declineButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/declineButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/decline"
                        android:textColor="@color/white"
                        app:cornerRadius="8dp"
                        android:layout_marginStart="8dp"
                        app:backgroundTint="@color/dark_red"
                        app:layout_constraintTop_toTopOf="@id/acceptButton"
                        app:layout_constraintStart_toEndOf="@id/acceptButton"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/scheduleCallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="Agendar Chamada"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notificationsButton" />

            <TextView
                android:id="@+id/scheduledCallsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Chamadas Agendadas"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scheduleCallButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/scheduledCallsTitle"
                tools:listitem="@layout/item_reserves_recycler_view"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>